Padding fixes, dark mode home improv contrast masthead

--- a/css/2components/_comments.scss
+++ b/css/2components/_comments.scss
@@ -548,7 +548,7 @@ body.dark {
 	
 	#comments {
 
-		border-top: 10px solid #343c48;
+		border-top: 20px solid #242931;
 
 		.title {
 			color: #7194bd;
