--- a/css/2components/_masthead.scss
+++ b/css/2components/_masthead.scss
@@ -1,7 +1,7 @@
 .grid-posts {
 	&.grid-section {
 		background: #eee;
-		padding: 15px 0 5px;
+		padding: 15px 0 0px;
 	}
 
 	&.secondary {
@@ -14,7 +14,7 @@
 			background: none;
 
 			@include break(mobile) {
-				height: $tile-height-mobile-sec !important;
+				height: $tile-height-mobile-sec +10 !important;
 			}
 
 			.wrapper {
@@ -46,7 +46,7 @@
 
 	&.home {
 		@include break(mobile) {
-			margin: -5px auto 15px;
+			margin: -10px auto 20px;
 		}
 
 		ul.featured-posts {
@@ -1037,7 +1037,7 @@
 	}//desk
 
 	@include break(mobile){
-		height: $tile-height-mobile + 13 !important;
+		height: $tile-height-mobile + 10 !important;
 
 		.wrapper {
 			position: relative;
