--- a/css/downloads/_downdark.scss
+++ b/css/downloads/_downdark.scss
@@ -31,6 +31,9 @@ body.dark {
 					background-color: #3C444F;
 				}
 			}
+			.subver {
+				color: #999 !important;
+			}
 		}
 
 		#product_info {
